sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value ecart
  ecart=lgr/2
  ^AlgShellSort:5: error: not found: value ecart
  while(ecart>0){
        ^AlgShellSort:8: error: not found: value ecart
    for (i<-1 to ecart){
                 ^AlgShellSort:18: error: not found: value ecart
  ecart=ecart/2  
  ^