sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  ecart=lgr/2
  
  while(ecart>0){
  
    
    for (i<-1 to ecart){
      var j=i
      var memory=getValeur(i)
      while (j>=1 && !plusPetitQue(j-1, memory)){
        copie(j-1, j)
        j=j-1
      }
      setValeur(j, memory) 
    }
  
  ecart=ecart/2  
  }
  
}